[gd_scene load_steps=9 format=3 uid="uid://v77dftufubst"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_4uatw"]
[ext_resource type="Texture2D" uid="uid://bh878eshhews2" path="res://icons/bg.png" id="2_xe5ua"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8qp2"]
bg_color = Color(0.796277, 0.804089, 0.800183, 1)
border_color = Color(0.603922, 0.305882, 0.411765, 1)
corner_radius_top_left = 35
corner_radius_top_right = 10
corner_radius_bottom_right = 35
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_5sfvd"]
resource_name = "new_animation"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label11:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1ie72"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label11:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wd68i"]
_data = {
"RESET": SubResource("Animation_1ie72"),
"new_animation": SubResource("Animation_5sfvd")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enrke"]
bg_color = Color(0.0117647, 0.0117647, 0.0117647, 0.580392)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8fh1"]
bg_color = Color(0.372549, 0.372549, 0.372549, 1)

[node name="TitleScreen" type="Control"]
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4uatw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 29.0
offset_top = 32.0
offset_right = 209.0
offset_bottom = 174.0

[node name="Button8" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 69)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_t8qp2")

[node name="Label2" type="Label" parent="VBoxContainer/Button8"]
layout_mode = 2
offset_left = 33.0
offset_top = -5.94501
offset_right = 120.0
offset_bottom = 64.055
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 21
theme_override_font_sizes/font_size = 34
text = "New"

[node name="Label3" type="Label" parent="VBoxContainer/Button8"]
layout_mode = 2
offset_left = 22.0
offset_top = 20.0
offset_right = 149.0
offset_bottom = 90.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 23
theme_override_font_sizes/font_size = 31
text = "Scientist"

[node name="Button9" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 69)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_t8qp2")

[node name="Label2" type="Label" parent="VBoxContainer/Button9"]
layout_mode = 2
offset_left = 33.0
offset_top = -5.94501
offset_right = 120.0
offset_bottom = 64.055
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 21
theme_override_font_sizes/font_size = 34
text = "Load"

[node name="Label3" type="Label" parent="VBoxContainer/Button9"]
layout_mode = 2
offset_left = 22.0
offset_top = 22.055
offset_right = 102.0
offset_bottom = 92.055
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 23
theme_override_font_sizes/font_size = 31
text = "Scientist"

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -89.0
offset_right = 658.0
offset_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.73, 0.73)
mouse_filter = 2
texture = ExtResource("2_xe5ua")
expand_mode = 2

[node name="Label11" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -235.0
offset_top = 74.0
offset_right = 229.0
offset_bottom = 144.0
grow_horizontal = 2
pivot_offset = Vector2(232, 35)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 11
theme_override_constants/shadow_outline_size = 31
theme_override_font_sizes/font_size = 51
text = "Everlasting Science"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wd68i")
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -187.0
offset_top = 50.0
offset_right = -41.0
offset_bottom = 147.0
grow_horizontal = 0

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 21
theme_override_font_sizes/font_size = 31
text = "Provider:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 21
item_count = 3
popup/item_0/text = "Phantom"
popup/item_0/id = 0
popup/item_1/text = "Solflare"
popup/item_1/id = 1
popup/item_2/text = "Backpack"
popup/item_2/id = 2

[node name="WalletAdapter" type="WalletAdapter" parent="."]

[node name="Panel" type="Panel" parent="."]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -173.0
offset_right = 288.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_enrke")

[node name="LineEdit" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -21.0
offset_right = 171.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_n8fh1")
alignment = 1
max_length = 32
expand_to_text_length = true

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_top = 51.0
offset_right = 68.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 21
theme_override_font_sizes/font_size = 31
text = "Name your Scientist:"

[node name="Button9" type="Button" parent="Panel"]
custom_minimum_size = Vector2(180, 69)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -106.0
offset_right = -40.0
offset_bottom = -37.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_t8qp2")

[node name="Label2" type="Label" parent="Panel/Button9"]
layout_mode = 2
offset_left = 33.0
offset_top = -5.94501
offset_right = 120.0
offset_bottom = 64.055
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 21
theme_override_font_sizes/font_size = 34
text = "Start"

[node name="Label3" type="Label" parent="Panel/Button9"]
layout_mode = 2
offset_left = 17.0
offset_top = 19.0
offset_right = 154.0
offset_bottom = 89.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 23
theme_override_font_sizes/font_size = 31
text = "Research"

[node name="Button10" type="Button" parent="Panel"]
custom_minimum_size = Vector2(90, 69)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 36.0
offset_top = -105.0
offset_right = 155.0
offset_bottom = -36.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_t8qp2")

[node name="Label2" type="Label" parent="Panel/Button10"]
layout_mode = 2
offset_left = 33.0
offset_top = -5.94501
offset_right = 120.0
offset_bottom = 64.055
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 21
theme_override_font_sizes/font_size = 34
text = "Go"

[node name="Label3" type="Label" parent="Panel/Button10"]
layout_mode = 2
offset_left = 17.0
offset_top = 19.0
offset_right = 110.0
offset_bottom = 89.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 23
theme_override_font_sizes/font_size = 31
text = "Back"

[node name="Transaction" type="Transaction" parent="Panel"]

[node name="Panel2" type="Panel" parent="."]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -292.0
offset_right = 288.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_enrke")

[node name="Label2" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_top = 51.0
offset_right = 68.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 21
theme_override_font_sizes/font_size = 31
text = "Pick a Scientist"

[node name="Button9" type="Button" parent="Panel2"]
custom_minimum_size = Vector2(180, 69)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -106.0
offset_right = -40.0
offset_bottom = -37.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_t8qp2")

[node name="Label2" type="Label" parent="Panel2/Button9"]
layout_mode = 2
offset_left = 33.0
offset_top = -5.94501
offset_right = 120.0
offset_bottom = 64.055
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 21
theme_override_font_sizes/font_size = 34
text = "Start"

[node name="Label3" type="Label" parent="Panel2/Button9"]
layout_mode = 2
offset_left = 17.0
offset_top = 19.0
offset_right = 154.0
offset_bottom = 89.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 23
theme_override_font_sizes/font_size = 31
text = "Research"

[node name="Button10" type="Button" parent="Panel2"]
custom_minimum_size = Vector2(90, 69)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 36.0
offset_top = -105.0
offset_right = 155.0
offset_bottom = -36.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_t8qp2")

[node name="Label2" type="Label" parent="Panel2/Button10"]
layout_mode = 2
offset_left = 33.0
offset_top = -5.94501
offset_right = 120.0
offset_bottom = 64.055
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 21
theme_override_font_sizes/font_size = 34
text = "Go"

[node name="Label3" type="Label" parent="Panel2/Button10"]
layout_mode = 2
offset_left = 17.0
offset_top = 19.0
offset_right = 110.0
offset_bottom = 89.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 23
theme_override_font_sizes/font_size = 31
text = "Back"

[node name="Transaction" type="Transaction" parent="Panel2" node_paths=PackedStringArray("payer")]
external_payer = true
payer = NodePath("../../WalletAdapter")

[node name="ItemList" type="ItemList" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -134.5
offset_right = 176.0
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 25

[connection signal="pressed" from="VBoxContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="VBoxContainer/Button9" to="." method="show_load_files"]
[connection signal="pressed" from="Panel/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Panel/Button10" to="." method="remove_naming"]
[connection signal="pressed" from="Panel2/Button9" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="Panel2/Button10" to="." method="remove_load"]
[connection signal="item_selected" from="Panel2/ItemList" to="." method="_on_item_list_item_selected"]
